--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <title>Sky Store - The Latest Movies straight from the Cinemas</title>
   </head>
 
-  <body>
+  <body oncontextmenu="return false;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
